[gd_scene load_steps=82 format=3 uid="uid://rvqwkmaacjb0"]

[ext_resource type="Script" path="res://Scripts/playerV2.gd" id="1_jcfhl"]
[ext_resource type="PackedScene" uid="uid://mur837omox7r" path="res://Scenes/Primary_Bullet.tscn" id="2_5jlgv"]
[ext_resource type="Script" path="res://Scripts/reticle_holder.gd" id="2_a8td1"]
[ext_resource type="Texture2D" uid="uid://badxt3odgl54d" path="res://mockup assets/Character Sprites/Idle/Idle_Left.png" id="2_k5cip"]
[ext_resource type="Texture2D" uid="uid://d2iny7bwh0l4u" path="res://Tilemap/reticle.png" id="3_5k8f6"]
[ext_resource type="Texture2D" uid="uid://dqw0od2qs7aqe" path="res://mockup assets/Character Sprites/Idle/Idle_Right.png" id="3_6lnbi"]
[ext_resource type="Texture2D" uid="uid://d3gfbbklauegb" path="res://mockup assets/Character Sprites/Idle/Idle_Down.png" id="4_bdlae"]
[ext_resource type="Texture2D" uid="uid://dvh4qnh66awp4" path="res://mockup assets/Character Sprites/Idle/UpIdle.png" id="5_f05h4"]
[ext_resource type="Texture2D" uid="uid://ogtjfdlm0ca2" path="res://mockup assets/Character Sprites/Walk/Walk_Down.png" id="6_jxcdq"]
[ext_resource type="Texture2D" uid="uid://6xo1vf7i5gwb" path="res://mockup assets/Character Sprites/Walk/Walk_Left.png" id="7_ln1qa"]
[ext_resource type="Texture2D" uid="uid://daalq1akb3omv" path="res://mockup assets/Character Sprites/Walk/Walk_Right.png" id="8_ke15h"]
[ext_resource type="Texture2D" uid="uid://mwidddosout7" path="res://mockup assets/Character Sprites/Walk/Walk_Up.png" id="9_3237c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s67ck"]
size = Vector2(11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jdsy"]
atlas = ExtResource("4_bdlae")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi1xv"]
atlas = ExtResource("4_bdlae")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf7px"]
atlas = ExtResource("4_bdlae")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5akc"]
atlas = ExtResource("4_bdlae")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3e1i"]
atlas = ExtResource("4_bdlae")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckvoa"]
atlas = ExtResource("2_k5cip")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s00g"]
atlas = ExtResource("2_k5cip")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_85hq5"]
atlas = ExtResource("2_k5cip")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_426yl"]
atlas = ExtResource("2_k5cip")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_brrnf"]
atlas = ExtResource("2_k5cip")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rioqj"]
atlas = ExtResource("3_6lnbi")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gyue"]
atlas = ExtResource("3_6lnbi")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkh4k"]
atlas = ExtResource("3_6lnbi")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwix5"]
atlas = ExtResource("3_6lnbi")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yisvb"]
atlas = ExtResource("3_6lnbi")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwu2r"]
atlas = ExtResource("5_f05h4")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu17u"]
atlas = ExtResource("5_f05h4")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uimal"]
atlas = ExtResource("5_f05h4")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e70qa"]
atlas = ExtResource("5_f05h4")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtvp6"]
atlas = ExtResource("5_f05h4")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqblk"]
atlas = ExtResource("6_jxcdq")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk8kg"]
atlas = ExtResource("6_jxcdq")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy6sl"]
atlas = ExtResource("6_jxcdq")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_maqyq"]
atlas = ExtResource("6_jxcdq")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qja1s"]
atlas = ExtResource("6_jxcdq")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ij72"]
atlas = ExtResource("7_ln1qa")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lb7e"]
atlas = ExtResource("7_ln1qa")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f1uq"]
atlas = ExtResource("7_ln1qa")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj2j5"]
atlas = ExtResource("7_ln1qa")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4flh7"]
atlas = ExtResource("7_ln1qa")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_33kl5"]
atlas = ExtResource("8_ke15h")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_800ok"]
atlas = ExtResource("8_ke15h")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdxnx"]
atlas = ExtResource("8_ke15h")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sdrq"]
atlas = ExtResource("8_ke15h")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh2aj"]
atlas = ExtResource("8_ke15h")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvywr"]
atlas = ExtResource("9_3237c")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_voae3"]
atlas = ExtResource("9_3237c")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7rrw"]
atlas = ExtResource("9_3237c")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_niv7g"]
atlas = ExtResource("9_3237c")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlxst"]
atlas = ExtResource("9_3237c")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_35t4q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jdsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi1xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf7px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5akc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3e1i")
}],
"loop": true,
"name": &"Idle_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckvoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s00g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85hq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_426yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brrnf")
}],
"loop": true,
"name": &"Idle_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rioqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gyue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkh4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwix5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yisvb")
}],
"loop": true,
"name": &"Idle_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwu2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu17u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uimal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e70qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtvp6")
}],
"loop": true,
"name": &"Idle_Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqblk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk8kg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy6sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maqyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qja1s")
}],
"loop": true,
"name": &"Walk_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ij72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lb7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f1uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj2j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4flh7")
}],
"loop": true,
"name": &"Walk_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33kl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_800ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdxnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sdrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh2aj")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvywr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voae3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7rrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niv7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlxst")
}],
"loop": true,
"name": &"Walk_Up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_q1k7g"]
resource_name = "Idle_Down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle_Down"]
}

[sub_resource type="Animation" id="Animation_3kdhh"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle_Left"]
}

[sub_resource type="Animation" id="Animation_uxy11"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle_Right"]
}

[sub_resource type="Animation" id="Animation_5n7wg"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle_up"]
}

[sub_resource type="Animation" id="Animation_yexvi"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk_Down"]
}

[sub_resource type="Animation" id="Animation_4fsbk"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk_Left"]
}

[sub_resource type="Animation" id="Animation_ci6vr"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk_Right"]
}

[sub_resource type="Animation" id="Animation_jjrny"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk_Up"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xhbsa"]
_data = {
"Idle_Down": SubResource("Animation_q1k7g"),
"Idle_Left": SubResource("Animation_3kdhh"),
"Idle_Right": SubResource("Animation_uxy11"),
"Idle_Up": SubResource("Animation_5n7wg"),
"Walk_Down": SubResource("Animation_yexvi"),
"Walk_Left": SubResource("Animation_4fsbk"),
"Walk_Right": SubResource("Animation_ci6vr"),
"Walk_Up": SubResource("Animation_jjrny")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gn3i7"]
animation = &"Idle_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mlmqh"]
animation = &"Idle_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4gjg6"]
animation = &"Idle_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n6r8p"]
animation = &"Idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5wksg"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gn3i7")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_mlmqh")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_4gjg6")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_n6r8p")
blend_point_3/pos = Vector2(0, -0.9)
blend_mode = 1

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_02o2h"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_byiya"]
animation = &"Walk_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4e34k"]
animation = &"Walk_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g7127"]
animation = &"Walk_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y3i4p"]
animation = &"Walk_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_gnwfx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_byiya")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_4e34k")
blend_point_1/pos = Vector2(0, -0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_g7127")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_y3i4p")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8i6kr"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4lhfs"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_558xl"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sucs4"]
advance_mode = 2
advance_condition = &"swing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l4b5e"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gby6h"]
states/idle/node = SubResource("AnimationNodeBlendSpace2D_5wksg")
states/idle/position = Vector2(357, 139)
states/swing/node = SubResource("AnimationNodeBlendSpace2D_02o2h")
states/swing/position = Vector2(355, 60)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_gnwfx")
states/walk/position = Vector2(553, 130)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_8i6kr"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_4lhfs"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_558xl"), "idle", "swing", SubResource("AnimationNodeStateMachineTransition_sucs4"), "swing", "idle", SubResource("AnimationNodeStateMachineTransition_l4b5e")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i303n"]
size = Vector2(9, 3)

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(0, -7)
collision_mask = 6
script = ExtResource("1_jcfhl")
Bullet = ExtResource("2_5jlgv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 6.5)
shape = SubResource("RectangleShape2D_s67ck")

[node name="ReticleHolder" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 16, 0)
default_color = Color(1, 1, 1, 0)
script = ExtResource("2_a8td1")

[node name="Sprite2D" type="Sprite2D" parent="ReticleHolder"]
position = Vector2(16, 0)
texture = ExtResource("3_5k8f6")

[node name="Aim" type="Marker2D" parent="ReticleHolder/Sprite2D"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_35t4q")
animation = &"Idle_Down"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_xhbsa")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimatedSprite2D"]
tree_root = SubResource("AnimationNodeStateMachine_gby6h")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/is_walking = false
parameters/conditions/swing = false
parameters/idle/blend_position = Vector2(-0.137566, 0.22467)
parameters/swing/blend_position = Vector2(0, 0)
parameters/walk/blend_position = Vector2(0.0560846, -0.0132159)

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="FeetHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetHitbox"]
position = Vector2(0.5, 10.5)
shape = SubResource("RectangleShape2D_i303n")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
